--- a/beginners/1727_06/ch6_Blending.html
+++ b/beginners/1727_06/ch6_Blending.html
@@ -125,7 +125,7 @@ var camera           = null,
  depthTest           = true,
  culling             = false,
  lambert             = true,
- floor               = true,
+// floor               = true,
  blendingEquation    = undefined,
  blendingSource      = undefined,
  blendingTarget      = undefined,
@@ -210,7 +210,7 @@ function configure(){
 */
 function load(){
     Floor.build(80,2);
-    Scene.addObject(Floor);
+//    Scene.addObject(Floor);
     Scene.loadObject('models/geometry/cone.json','cone',{'diffuse':[0,1,1,1]});
     Scene.loadObject('models/geometry/sphere.json','sphere',{'diffuse':[182/255, 6/255,174/255,1]});
     
@@ -500,7 +500,7 @@ $('#reset-btn').click(function(){
     blending = true;
     culling = false;
     lambert = true;
-    floor = true;
+//    floor = true;
     blendingEquation    = gl.FUNC_ADD;
     blendingSource      = gl.SRC_ALPHA;
     blendingTarget      = gl.ONE_MINUS_SRC_ALPHA;    
@@ -509,7 +509,7 @@ $('#reset-btn').click(function(){
     $('#blending-btn').attr("checked",blending).button("refresh");
     $('#culling-btn').attr("checked",culling).button("refresh");
     $('#lambert-btn').attr("checked",lambert).button("refresh");
-    $('#floor-btn').attr("checked",floor).button("refresh");
+//    $('#floor-btn').attr("checked",floor).button("refresh");
     
     $( "#slider-cone-alpha" ).slider( "option", "value", 1.0 );
     $( "#slider-sphere-alpha" ).slider( "option", "value", 1.0 );
@@ -740,13 +740,13 @@ function updateAlphaCone(){
 
 $('#opt-sphere-first').click(function(){
 	Scene.renderSooner('sphere');
-	Scene.renderFirst('floor');
+//	Scene.renderFirst('floor');
 	draw();
 });
 
 $('#opt-cone-first').click(function(){
 	Scene.renderSooner('cone');
-	Scene.renderFirst('floor');
+//	Scene.renderFirst('floor');
 	draw();
 });
  
