--- a/mapdemo/line.html
+++ b/mapdemo/line.html
@@ -31,8 +31,15 @@
     #ifdef GL_ES
     precision highp float;
     #endif
+    varying vec2 vNormal;
     void main() {
-        gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
+        float dist = length(vNormal);
+        if(dist > 1.0) {
+                gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
+                       // discard;
+        } else {
+            gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
+        }
     }
 </script>
 
@@ -45,14 +52,13 @@
     uniform mat4 uPMatrix;
     uniform mat4 uNMatrix;
 
-    void main() {
-    aVertexNormal;
-    aVertexIndex;
-    vec2 vertexPos;
+    varying vec2 vNormal;
 
-//    if(mod(aVertexIndex, 4.0) == 0.0) {
-    vertexPos = aVertexPosition.xy + normalize(aVertexNormal);
-//    }
+    void main() {
+        vec2 vertexPos;
+        aVertexIndex;
+        vNormal = aVertexNormal;
+        vertexPos = aVertexPosition.xy + aVertexNormal;
         gl_Position = uPMatrix * uMVMatrix * vec4(vertexPos, 0.0, 1.0);
     }
 </script>
@@ -65,11 +71,7 @@
 <div id="content">
     <canvas width="800" height="500" id='the-canvas'></canvas>
     <div>
-        camera: 
-        <input id="orbit" type="radio" value="orbit" name="camera" checked/>
-        <label for="orbit">orbit</label>
-        <input id="track" type="radio" value="track" name="camera"/>
-        <label for="track">track</label>
+        <button id="render">render</button>
     </div>
 </div>
 <script type="text/javascript" src="js/framework/Utils.js"></script>
