--- a/mapdemo/line.html
+++ b/mapdemo/line.html
@@ -27,12 +27,11 @@
     }
 </script>
 
-<script id="shader-fs-1" type="x-shader/x-fragment">
+<script id="shader-fs-solid" type="x-shader/x-fragment">
     #ifdef GL_ES
     precision highp float;
     #endif
     uniform vec3 uColor;
-    uniform vec2 uResolution;
     uniform float uLineWidth;
 
     varying vec2 vOrigin;
@@ -43,19 +42,20 @@
     void main() {
         float distance = distance(vOrigin, vPosition);
         if(vIndex > 0.0 && distance >= uLineWidth) {
+        //    if(vIndex > 0.5) {
             discard;
         } else {
             if (abs(vDirection) > 0.9) {
                 float alpha = smoothstep(0.0, 1.0, 10.0 * (1.0 - abs(vDirection)));
-                gl_FragColor = vec4(uColor.rgb, alpha);
+                gl_FragColor = vec4(uColor, alpha * 0.5);
             } else {
-                gl_FragColor = vec4(uColor, 1);
+                gl_FragColor = vec4(uColor, 0.5);
             }
         }
     }
 </script>
 
-<script id="shader-vs-1" type="x-shader/x-vertex">
+<script id="shader-vs-solid" type="x-shader/x-vertex">
     attribute vec3 aVertexPosition;
     attribute vec2 aVertexNormal;
     attribute float aVertexIndex;
@@ -70,7 +70,7 @@
     varying vec2 vOrigin;
     varying vec2 vPosition;
     varying float vIndex;
-        varying float vDirection;
+    varying float vDirection;
 
     void main() {
         vec2 vertexPos;
@@ -82,6 +82,74 @@
         gl_Position = uPMatrix * uMVMatrix * vec4(vertexPos, 0.0, 1.0);
     }
 </script>
+<script id="shader-fs-dash" type="x-shader/x-fragment">
+    #ifdef GL_ES
+    precision highp float;
+    #endif
+    uniform vec3 uColor;
+    uniform float uLineWidth;
+    uniform sampler2D uImage;
+
+    varying vec2 vOrigin;
+    varying float vIndex;
+    varying float vDirection;
+    varying vec2 vPosition;
+    varying vec2 vTex;
+
+    void main() {
+        float distance = distance(vOrigin, vPosition);
+        if(vIndex > 0.0 && distance >= uLineWidth) {
+            discard;
+        } else {
+            if (abs(vDirection) > 0.9) {
+                float alpha = smoothstep(0.0, 1.0, 10.0 * (1.0 - abs(vDirection)));
+                gl_FragColor = vec4(uColor.rgb, alpha);
+        } else {
+                float dash_alpha = texture2D(uImage, vTex).a;
+                if(dash_alpha < 0.5) {
+                    discard;
+                } else {
+                    gl_FragColor = vec4(uColor, 1);
+                }
+            }
+        }
+    }
+</script>
+
+<script id="shader-vs-dash" type="x-shader/x-vertex">
+    attribute vec3 aVertexPosition;
+    attribute vec2 aVertexNormal;
+    attribute float aVertexIndex;
+    attribute float aDirection;
+    attribute float aLengthSoFar;
+
+    uniform mat4 uMVMatrix;
+    uniform mat4 uPMatrix;
+    uniform mat4 uNMatrix;
+    uniform float uTexY;
+    uniform float uDash;
+
+    uniform float uLineWidth;
+    
+    varying vec2 vOrigin;
+    varying vec2 vPosition;
+    varying float vIndex;
+    varying float vDirection;
+    varying vec2 vTex;
+
+    void main() {
+        vec2 vertexPos;
+        vOrigin = aVertexPosition.xy;
+        vIndex = aVertexIndex;
+        vDirection = aDirection;
+        vertexPos = aVertexPosition.xy + aVertexNormal * uLineWidth;
+        vPosition = vertexPos.xy;
+    // vTex = vec2(a_linesofar * u_patternscale_a.x, normal.y * u_patternscale_a.y + u_tex_y_a);
+        vTex = vec2(aLengthSoFar / uDash, uTexY);
+
+        gl_Position = uPMatrix * uMVMatrix * vec4(vertexPos, 0.0, 1.0);
+    }
+</script>
 </head>
 
 <body>
@@ -90,6 +158,7 @@
 </div>
 <div id="content">
     <canvas width="800" height="500" id='the-canvas'></canvas>
+    <!-- <canvas width="256" height="512" id="line"></canvas> -->
     <div>
         <button id="render">render</button>
         <button id="render-with-lines">render with lines</button>
@@ -107,9 +176,11 @@
         <button id="cap-round">round</button>
     </div>
 </div>
+<script type="text/javascript" src="js/framework/line_atlas.js"></script>
 <script type="text/javascript" src="js/framework/Utils.js"></script>
 <script type="text/javascript" src="js/framework/WebGLApp.js"></script>
 <script type="text/javascript" src="js/framework/Camera.js"></script>
+<script type="text/javascript" src="js/framework/lineUtil.js"></script>
 <script type="text/javascript" src="js/framework/Scene.js"></script>
 <script type="text/javascript" src="js/framework/Program.js"></script>
 <script type="text/javascript" src="js/framework/Transforms.js"></script>
